--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POSTGRES_URL="postgres://default:LKb6OiWHj5gf@ep-rapid-waterfall-a428m6t8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 JWT_SECRET_KEY = "aofeooieoeowjwoow"
 OSBORNE_URL = "https://www.osbornebooks.co.uk/api"
+OSBORNE_ADMIN_TOKEN = "abc"
