--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ POSTGRES_URL="postgres://default:LKb6OiWHj5gf@ep-rapid-waterfall-a428m6t8-pooler
 JWT_SECRET_KEY = "aofeooieoeowjwoow"
 OSBORNE_URL = "https://www.osbornebooks.co.uk/api"
 OSBORNE_ADMIN_TOKEN = "abc"
-SERVER_TOKEN = "masServer864token147"
+SERVER_TOKEN = "EdCz6h43MmVRgOerR"
